--- a/settings.ini
+++ b/settings.ini
@@ -39,7 +39,7 @@ status = 3
 user = cj-mills
 
 ### Optional ###
-# requirements = fastcore pandas
+requirements = fastcore pandas cjm_fasthtml_daisyui cjm_fasthtml_sysmon
 # dev_requirements = 
 # console_scripts =
 # conda_user = 
