--- a/settings.ini
+++ b/settings.ini
@@ -39,7 +39,7 @@ status = 3
 user = cj-mills
 
 ### Optional ###
-requirements = fastcore pandas cjm_fasthtml_daisyui cjm_fasthtml_sysmon
+requirements = fastcore pandas cjm_fasthtml_daisyui cjm_fasthtml_sysmon cjm_fasthtml_plugins
 # dev_requirements = 
 # console_scripts =
 # conda_user = 
